<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_nav2</name>
  <version>0.0.0</version>
  <description>Nav2 compliant behavior tree navigator leveraging AutoAPMS.</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>nav2_core</depend>
  <depend>rclcpp</depend>
  <depend>auto_apms_behavior_tree</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
